# the-fetus

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Deployment instructions - Storage.docx  Deployment instructions.docx  FIX_TITLE_BAR_COLOR.md  HOW_TO_INSTALL.md  MINIMAL_WINDOW_GUIDE.md  Makefile  PWA_GUIDE.md  PWA_IMPLEMENTATION_SUMMARY.md  PWA_QUICK_REFERENCE.md  QUICK_MINIMAL_STEPS.md  README.md  REMOVE_EXTENSION_ICONS.md  SECURITY.md  app.py  bluehost_connection.ipynb  caldav.ipynb  create_blank_icons.py  deployment.json.template  extract_details.py  extract_mobile_number.py  generate_icons.py  generate_simple_icons.py  keys.env.template  mobile.ipynb  openai_api_usage.ipynb  openai_test.py  openai_usage.csv  openai_usage_key_....csv  pyproject.toml  rag.ipynb  requirements-dev.txt  requirements.txt  requirements_old.txt  setup_dev.py  transcript.py  ~$ployment instructions - Storage.docx  ~$ployment instructions.docx
.github/workflows/: azure-deploy.yml  deploy.yml  main_fetusapp-dev.yml  main_fetusapp-prod.yml  main_nameapp-dev.yml
fetusapp/: __init__.py  card.html  data.sqlite-journal  models.py  rag.ipynb  rag_php_db.ipynb  storage_client.py  test.html
fetusapp/chatai/: coursework.md  get_balance.py  note_to_app_service.py  services.py  tools.py  views.py
fetusapp/core/: views.py
fetusapp/documents/: views.py
fetusapp/error_pages/: handlers.py
fetusapp/notebooks/: agent_prototype.ipynb  openai_api_usage.ipynb
fetusapp/patients/: document_views.py  forms.py  history_gyn.py  history_gyn_views.py  history_medical_views.py  history_obstetrics_views.py  pregnancy_views.py  (+1 more)
migration_scripts/: column_mapping.json  create_mig_scripts.ipynb  crud.py  e2e_migration_playbook.ipynb  eda.ipynb  execute_mig_scripts.ipynb  formating.py  manual_db_upgrade.ipynb  migrate_blob_docs.py  migration.ipynb  migration.py  migration_exec.ipynb
(+27 files in other folders)
