[tool.poetry]
name = "the-fetus"
version = "0.1.0"
description = "Medical practice management application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "fetusapp"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-login = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-wtf = "*"
wtforms = "*"
python-dotenv = "*"
openai = "*"
pandas = "*"
unicodedata2 = "*"
# Add other dependencies from your requirements.txt here
azure-identity = "^1.25.0"
azure-storage-blob = "^12.26.0"
azure-identity-broker = "^1.3.0"
langchain-openai = "^0.3.35"
langchain-anthropic = "^0.3.22"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
flake8 = "*"
pytest = "*"
yfinance = "*"
matplotlib = "^3.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ...existing code...
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | fetusappenv
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fetusapp.models"
ignore_errors = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E501",
    "W503",
    "E402",
]
exclude = [
    ".git",
    "__pycache__",
    "fetusappenv",
    "migrations",
    ".venv",
    "build",
    "dist"
]
